tests/NormalTests/paczka1/fuzzy1/82436438.err
Error in line 7: 8h9bj A444 85,7
Error in line 9: 8h9bj A227 10,3
Error in line 11: 8h9bj A444 60,2
Error in line 20: SmyjVYS A227 36,7
Error in line 25: CB72OwVdyh S639 -3,2
Error in line 24: 8h9bj A444 95,7
Error in line 27: 8h9bj S639 6,2
